--- a/src/app.css
+++ b/src/app.css
@@ -3,5 +3,18 @@
 }
 
 html {
+	font-family:
+		system-ui,
+		-apple-system,
+		BlinkMacSystemFont,
+		'Segoe UI',
+		Roboto,
+		Oxygen,
+		Ubuntu,
+		Cantarell,
+		'Open Sans',
+		'Helvetica Neue',
+		sans-serif;
 	background-color: #002244;
+	color: blanchedalmond;
 }
